<resources>
    <string name="app_name">BestNights</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="new_party">New Party</string>
    <string name="cancel">Cancel</string>
    <string name="eventname">Event name:</string>
    <string name="ticketprice">Ticket price:</string>
    <string name="ticketamount">Number of tickets:</string>
    <string name="eventcapacity">Capacity of the event:</string>
    <string name="eventlocation">Event location:</string>
    <string name="earlybirdprice">Earlybird ticket price:</string>
    <string name="normalprice">Normal ticket price:</string>
    <string name="earlybirdamount">Number of earlybird tickets:</string>
    <string name="normalamount">Number of normal tickets:</string>
    <string name="new_festival">New festival</string>
    <string name="edit_festival">Edit festival</string>
    <string name="eventdate">Event date:</string>
    <string name="purchase">Purchase</string>
    <string name="purchasedParties">Purchased party tickets:</string>
    <string name="purchasedFestivals">Purchased festival tickets:</string>
    <string name="show_party">The details of the party</string>
    <string name="show_festival">The details of the festival</string>
    <string name="back">Back</string>
    <string name="loginRow">Dive in to the NIGHT!</string>
    <string name="logIn">Log IN</string>
    <string name="register">Sign UP</string>
    <string name="startdate">Start date of the festival:</string>
    <string name="enddate">End date of the festival:</string>
</resources>