<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dip"
    android:scrollbars="vertical"
    android:background="@color/dialogBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/eventname"/>

    <TextView
        android:id="@+id/FestivalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/eventname"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:textColor="@color/white"
        android:text="@string/ticketprice"/>

    <TextView
        android:id="@+id/FestivalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/ticketprice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:textColor="@color/white"
        android:text="@string/ticketamount"/>

    <TextView
        android:id="@+id/FestivalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/ticketamount"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:textColor="@color/white"
        android:text="@string/eventlocation"/>

    <TextView
        android:id="@+id/FestivalLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/eventlocation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:textColor="@color/white"
        android:text="@string/eventdate"/>

    <TextView
        android:id="@+id/FestivalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/eventdate"/>

</LinearLayout>